<resources>
    <string name="app_name">BoogieMeter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_recording">Start Recording</string>
    <string name="jumps">Jumps</string>
    <string name="new_event">New Event</string>
    <string name="name">Name:</string>
    <string name="event_name_et">Event\'s name</string>
    <string name="date">Date:</string>
    <string name="location">Location:</string>
    <string name="add_new_event">Add new Event</string>
    <string name="jumping_time">Jumping Time:</string>
    <string name="events">Events</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="ok">Ok</string>
    <string name="summary">Summary</string>
    <string name="boogies">Boogies</string>
    <string name="superdooper_boogies">SuperDooper Boogies</string>
</resources>
