<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
        name="eventViewModel"
        type="com.borbi.boogiemeter.event.EventViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/new_event_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/new_event"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_event_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="@+id/new_event_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/new_event_title_tv" />

        <EditText
            android:id="@+id/name_event_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="14sp"
            tools:text="Event 123"
            android:autofillHints="@string/event_name_et"
            app:layout_constraintStart_toStartOf="@+id/name_event_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_event_tv"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/date_event_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="@+id/new_event_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/name_event_et" />

        <EditText
            android:id="@+id/date_event_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/new_event_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/date_event_tv" />

        <TextView
            android:id="@+id/location_event_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/location"
            app:layout_constraintStart_toStartOf="@+id/new_event_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/date_event_et" />

        <EditText
            android:id="@+id/location_event_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/new_event_title_tv"
            app:layout_constraintTop_toBottomOf="@+id/location_event_tv" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:background="#CDDC39"
            android:text="@string/start_recording"
            android:onClick="@{() -> eventViewModel.moveToRecording()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>